Changed Fonts, fixed underline on mobile and desktop

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,14 @@
 @import "tailwindcss";
 
-body {
-  font-family: "Montserrat", sans-serif;
+h1,
+h2,
+h3,
+button {
+  font-family: "Space Grotesk", sans-serif;
+}
+
+p {
+  font-family: "Poppins", sans-serif;
 }
 
 /* blinking cursor for typing */
